<resources>
    <string name="app_name">MP</string>
    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="title_profile">Profile</string>
    <string name="lundi">Lundi</string>
    <string name="API_KEY">AIzaSyCVzgR8ALL2SAb2UcVDuWKutqvALW4tju0</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo">Logo</string>
    <string name="deconnexion">DÉCONNEXION</string>
    <string name="nombre_d_valuations_attribu_es">Nombre d’évaluations attribuées</string>
    <string name="courriel">Courriel</string>
    <string name="nom">Nom</string>
    <string name="mon_compte">Mon compte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="mot_de_passe">Mot de passe</string>
</resources>
