<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="ca.ulaval.ima.mp.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="ca.ulaval.ima.mp.ui.list.ResaurantListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_resaurant_list_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ca.ulaval.ima.mp.ui.profile.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>
